src/pages/home.css
ion-toolbar{
	text-align: center;
}
p {
	font-family: 'Bodoni MT Condensed', serif;
	color: yellow;
	text-align: center;
	font-size: 22px;
}
label {
	font-family: 'Bodoni MT Condensed', serif !important;
	color: yellow;
}
h2 {
	font-family: 'Bodoni MT Condensed', serif;
	color: yellow;
	text-align: center;
	font-size: 50px;
}
#yourAccount{
	font-family: 'Bodoni MT Condensed', serif !important;
	color: yellow !important;
}
#userName {
   font-family: 'Bodoni MT Condensed', serif !important;
   font-size: 20px !important;
   color: yellow;
}
#logoutButton {
	font-family: 'Bodoni MT Condensed', serif !important;
    --color: yellow !important;
    --background: black !important;
    display: block !important;
    margin: auto !important;
    width: 200px !important;
    height: 50px !important;
    font-size: 1.25rem !important;
}
#auditionsButton{
	padding-top: 25px;
}
#expandButton{
	font-family: 'Bodoni MT Condensed', serif !important;
    --color: yellow !important;
    --background: black !important;
    display: block !important;
    margin: auto !important;
    width: 400px !important;
    height: 100px !important;
    font-size: 2.5rem !important;
	padding-bottom: 10px;
}
#collapseButton{
	font-family: 'Bodoni MT Condensed', serif !important;
    --color: yellow !important;
    --background: black !important;
    display: block !important;
    margin: auto !important;
    width: 400px !important;
    height: 100px !important;
    font-size: 2.5rem !important;
	padding-top: 10px;
}
#exportButton{
	padding-bottom: 30px;
}
#instructions{
	width: 60vw;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	font-size: larger;
	margin-top: 5em;
}

#url_submission{
	width: 70vw;
	margin-left: auto;
	margin-right: auto;
}

#form_data_summary{
	width: 70vw;
	margin-left: auto;
	margin-right: auto;
}
@media only screen and (max-width: 431px) {
	ion-toolbar{
		text-align: center;
	}
	p {
		font-family: 'Bodoni MT Condensed', serif;
		color: yellow;
		text-align: center;
		font-size: 15px;
	}
	label {
		font-family: 'Bodoni MT Condensed', serif !important;
		color: yellow;
	}
	h2 {
		font-family: 'Bodoni MT Condensed', serif;
		color: yellow;
		text-align: center;
		font-size: 20px;
	}
	#yourAccount{
		font-family: 'Bodoni MT Condensed', serif !important;
		color: yellow !important;
	}
	#userName {
	   font-family: 'Bodoni MT Condensed', serif !important;
	   font-size: 20px !important;
	   color: yellow;
	}
	#logoutButton {
		font-family: 'Bodoni MT Condensed', serif !important;
		--color: yellow !important;
		--background: black !important;
		display: block !important;
		margin: auto !important;
		width: 200px !important;
		height: 50px !important;
		font-size: 1.5rem !important;
	}
	#auditionsButton{
		padding-top: 10px;
	}
	#expandButton{
		font-family: 'Bodoni MT Condensed', serif !important;
		--color: yellow !important;
		--background: black !important;
		display: block !important;
		margin: auto !important;
		width: 300px !important;
		height: 75px !important;
		font-size: 2rem !important;
		padding-bottom: 5px;
	}
	#collapseButton{
		font-family: 'Bodoni MT Condensed', serif !important;
		--color: yellow !important;
		--background: black !important;
		display: block !important;
		margin: auto !important;
		width: 300px !important;
		height: 75px !important;
		font-size: 2rem !important;
		padding-top: 5px;
	}
	#exportButton{
		padding-bottom: 10px;
	}
	#instructions{
		width: 60vw;
		margin-left: auto;
		margin-right: auto;
		text-align: center;
		font-size: larger;
		margin-top: 1.5em;
	}
	
	#url_submission{
		width: 70vw;
		margin-left: auto;
		margin-right: auto;
	}
	
	#form_data_summary{
		width: 70vw;
		margin-left: auto;
		margin-right: auto;
	}
}

